--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset='utf-8'>
-    <title>{{template "title" .}} - Snippetbox</title>
+    <title>{{template "title" .}} - Codebox</title>
     <!-- Link to the CSS stylesheet and favicon -->
     <link rel='stylesheet' href='/static/css/main.css'>
     <link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-icon'>
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1><a href='/'>Snippetbox</a></h1>
+        <h1><a href='/'>Codebox</a></h1>
     </header>
     {{template "nav" .}}
     <main>
@@ -26,7 +26,8 @@
     </main>
     <footer>
         <!-- Update the footer to include the current year -->
-        Powered by <a href='https://golang.org/'>Go</a> in {{.CurrentYear}}
+        Powered by <a href='https://golang.org/'>Go</a> // By <a href='https://github.com/niewolinsky'>Przemyslaw
+            Niewolinski</a>
     </footer>
     <!-- And include the JavaScript file -->
     <script src="/static/js/main.js" type="text/javascript"></script>
