--- a/ui/html/pages/snippets.html
+++ b/ui/html/pages/snippets.html
@@ -1,6 +1,6 @@
 {{define "title"}}Home{{end}}
 {{define "main"}}
-<h2>Latest Public Snippets</h2>
+<h2>Your Private Snippets</h2>
 {{if .Snippets}}
 <table>
     <tr>
